--- a/views/layout.slim
+++ b/views/layout.slim
@@ -5,14 +5,24 @@ html lang="en"
         meta name="viewport" content="width=device-width, initial-scale=1.0"/
         meta http-equiv="X-UA-Compatible" content="ie=edge"/
         link rel="stylesheet" href="/css/main.css"
+        link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"
+        link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"
         title My Webshop
     body
 
     header
         .logo
 
-        
+        .login
+            h3
+                <a href="/login"> Login </a>
 
+        .register
+            h3
+                <a href="/register"> Register </a>
+            
+        .cart
+            i class="material-icons" shopping_cart
 
 
     ==yield
