--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,17 +1,51 @@
 body {
-    background-color: blue;
     margin: 0;
     padding: 0;
+    font-family: 'Roboto', sans-serif;
 }
 
 header {
+    display: grid;
+    grid-template-columns: 10% auto repeat(3, 10%);
     height: 100px;
     width: 100%;
+    background-color: white;
+    box-shadow: 0 0 10px rgba(0,0,0,0.75);
 }
 
 .logo {
     height: 100%;
-    width: 10%;
     background: url("/img/logo.png") center no-repeat;
     background-size: 70%;
+    grid-column: 1 / 2;
+}
+
+.login, .register, .cart {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.login a, .register a {
+    background-color: black;
+    color: white;
+    padding: 10px 20px 10px 20px;
+    border-radius: 2px;
+    text-decoration: none;
+}
+
+.login {
+    grid-column: 3/4;
+}
+
+.register {
+    grid-column: 4/5;
+}
+
+.cart {
+    grid-column: 5/6;
+}
+
+.cart .material-icons {
+    font-size: 36px;
 }
