--- a/views/login.slim
+++ b/views/login.slim
@@ -1,4 +1,7 @@
-form action="/login" method="POST"
-    input type="text" name="username" placeholder="Username"
-    input type="password" name="password" placeholder="Password"
-    input type="submit" value="Login"
+section.form
+    h2 Login
+
+    form action="/login" method="POST"
+        input type="text" name="username" placeholder="Username"
+        input type="password" name="password" placeholder="Password"
+        input type="submit" value="Login"
