--- a/public/css/main.css
+++ b/public/css/main.css
@@ -6,7 +6,7 @@ body {
 
 header {
     display: grid;
-    grid-template-columns: 10% auto repeat(3, 10%);
+    grid-template-columns: 10% auto repeat(4, 10%);
     height: 100px;
     width: 100%;
     background-color: white;
@@ -17,35 +17,113 @@ header {
     height: 100%;
     background: url("/img/logo.png") center no-repeat;
     background-size: 70%;
-    grid-column: 1 / 2;
+    grid-column: 1/2;
 }
 
-.login, .register, .cart {
+.login, .register, .cart, .error {
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-.login a, .register a {
+.login input[type="submit"], .register input[type="submit"] {
     background-color: black;
     color: white;
-    padding: 10px 20px 10px 20px;
+    cursor: pointer;
+    width: 80px;
+    height: 40px;
+    border: none;
     border-radius: 2px;
     text-decoration: none;
 }
 
-.login {
+.login p {
+    width: 80px;
+    height: 40px;
+}
+
+.error {
     grid-column: 3/4;
 }
 
-.register {
+.login {
     grid-column: 4/5;
 }
 
-.cart {
+.register {
     grid-column: 5/6;
+}
+
+.cart {
+    grid-column: 6/7;
 }
 
 .cart .material-icons {
     font-size: 36px;
+}
+
+main {
+    display: flex;
+
+}
+
+.form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    min-height: calc(100vh - 100px);
+}
+
+.form form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.form form input {
+    margin: 10px;
+    padding: 10px;
+    border-radius: 2px;
+    border: 1px solid black;
+}
+
+.form form input[type="submit"] {
+    border: none;
+    background-color: black;
+    color: white;
+    padding: 10px;
+    width: 50%;
+}
+
+.shopLeft {
+    width: 20%;
+    min-height: calc(100vh - 100px);
+    border: 2px solid black;
+}
+
+.shopLeft .category {
+    height: 50px;
+    border: 1px dotted black;
+}
+
+.shopRight {
+    width: 80%;
+    min-height: calc(100vh - 100px);
+    border: 2px solid black;
+}
+
+.sortBar {
+    height: 50px;
+    width: 100%;
+    background-color: white;
+    border: 1px solid black;
+}
+
+.articles {
+    display: grid;
+    grid-auto-flow: row;
+}
+
+.article {
 }
