--- a/views/shop.slim
+++ b/views/shop.slim
@@ -10,22 +10,14 @@ section.shopRight
     .sortBar
 
     .articles
-        .article
-        .article
-        .article
-        .article
-
-        .article
-        .article
-        .article
-        .article
-
-        .article
-        .article
-        .article
-        .article
-
-        .article
-        .article
-        .article
-        .article
+        - i = 0
+        - articles.each do |i|
+            .article
+                div 
+                    img src="#{i["image_url"]}" height="150px"
+                div 
+                    p #{i["name"]}
+                    p Price: #{i["price"]}
+                    form action="/add_to_cart" method="POST"
+                        input type="hidden" value="#{i["id"]}" name="article_id"
+                        input type="submit" value="Add to cart" 
