--- a/views/layout.slim
+++ b/views/layout.slim
@@ -31,23 +31,8 @@ html lang="en"
                 form action="/register" method="GET"
                     input type="submit" value="Register"
             
-        .cart_logo
+        a.cart_logo href="/cart"
             i class="material-icons" shopping_cart
-
-            .cart
-                - total_price = 0
-                - if cart
-                    - cart[1].each_with_index do |article, i|
-                        p Name: #{article["name"]}
-                        p Price: #{article["price"]}
-                        p Amount: #{cart[0][i]["amount"]}
-                        form action="/remove_from_cart" method="POST"
-                            input type="hidden" value="#{article["id"]}" name="article_id"
-                            input type="submit" value="Remove from cart" 
-                        - total_price += article["price"] * cart[0][i]["amount"]
-                    p Total price: #{total_price}
-
-
 
     main
         ==yield
