--- a/public/css/main.css
+++ b/public/css/main.css
@@ -59,7 +59,17 @@ header input[type="submit"] {
     grid-column: 6/7;
     text-decoration: none;
     color: black;
-    text-shadow: 2px 2px 2px rgba(0,0,0,0.75);
+}
+
+.cart_logo span {
+    height: 25px;
+    width: 25px;
+    border-radius: 50%;
+    background-color: black;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .cart_logo .material-icons {
@@ -103,6 +113,7 @@ main {
     color: white;
     padding: 10px;
     width: 50%;
+    cursor: pointer;
 }
 
 .shop {
@@ -122,7 +133,7 @@ main {
 
 .article {
     width: 100%;
-    background-size: 70%;
+    background-size: 55%;
     background-repeat: no-repeat;
     background-position: center;
     display: flex;
@@ -132,26 +143,53 @@ main {
     box-shadow: 2px 2px 10px rgba(0,0,0,0.75);
 }
 
-.article div {
-    background-color: rgba(255,255,255,0.5);
+.article div:first-child {
     height: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-end;
 }
 
-.article div p, .article div h3 {
+.article div h3 {
+    height: 50%;
+    text-align: center;
+}
+
+.article div:first-child p, .article div h3 {
     margin-left: 10px;
 }
 
-.article input[type="submit"] {
-    background-color: black;
-    border: none;
-    color: white;
-    font-family: 'Roboto', sans-serif;
-    margin: 0 0 10px 10px;
-    font-size: 1.05em;
-    padding: 5px;
-    border-radius: 2px;
-    box-shadow: 2px 2px 2px rgba(0,0,0,0.75);        
+.buttons {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: flex-end;
+    height: 50%;
+}
+
+.buttons p {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.article form {
+    display: flex;
+    flex-direction: row;
+    width: 25%;
+}
+
+.article form:last-of-type {
+    justify-content: flex-end;
+}
+
+.article input[type="hidden"] {
+    display: none;
+}
+
+.article input[type="image"] {
+    margin: 10px;
+    cursor: pointer;   
 }
