--- a/views/cart.slim
+++ b/views/cart.slim
@@ -9,7 +9,7 @@
                 - p cart[0][0]
                 form action="/remove_from_cart" method="POST"
                     input type="hidden" value="#{cart[0][i]["article_id"]}" name="article_id"
-                    input type="submit" value="Remove from cart" 
+                    input type="image" name="submit" src="img/removeFromCart.svg" 
                 - total_price += article["price"] * cart[0][i]["amount"]
         - if total_price != 0
             p Total price: #{total_price}
